@@ -1,11 +1,11 @@
 
 
 This archive contains the distribution Task-OTRS,
-version 1.00:
+version 1.02:
 
   Almost all of the modules required for installing OTRS Help Desk.
 
-This software is Copyright (c) 2011 by OTRS B.V..
+This software is Copyright (c) 2012 by OTRS B.V..
 
 This is free software, licensed under:
 
