@@ -2,16 +2,19 @@ name    = Task-OTRS
 author  = Michiel Beijen <michiel.beijen@gmail.com>
 license = AGPL_3
 copyright_holder = OTRS BV
-copyright_year   = 2011
+copyright_year   = 2012
 main_module = lib/Task/OTRS.pm
-version = 1.01
+version = 1.02
 
 [Prereqs]
 perl             = 5.8.6  ; as specified in Defaults.pm
+Authen::NTLM     = 0      ; for Mail::IMAPClient - optional
+Authen::SASL     = 0      ; for Mail::IMAPClient - optional
 Compress::Zlib   = 0
 Crypt::PasswdMD5 = 0
 Date::Format     = 0
 DBI              = 0
+Digest::HMAC_MD5 = 0      ; for Mail::IMAPClient - optional
 Digest::MD5      = 0
 Encode::HanExtra = 0
 GD               = 0
@@ -19,6 +22,7 @@ GD::Text         = 0
 GD::Graph        = 0
 IO::Socket::SSL  = 0
 JSON::XS         = 0
+Mail::IMAPClient = 0
 MIME::Base64     = 0
 Net::DNS         = 0.61  ; bug#2017
 Net::LDAP        = 0
